# potify

./: .gitignore  README.md  main.py  notifier.py  pyproject.toml
src/spyotify/cli/: __init__.py  main.py  notifier.py  renderer.py
src/spyotify/core/: image_cache.py  oauth.py  player.py
